<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principalconstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">



    <TextView
        android:id="@+id/searchtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">
    </TextView>

    <TextView
        android:id="@+id/genres_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Your_top_genres"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchtext">


    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/genres_text"
        tools:layout_editor_absoluteX="206dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <Button
            android:id="@+id/Christian_button"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/red"
            android:text="@string/top_christians"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@+id/Romantic_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Romantic_button"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/gris"
            android:text="@string/romantic"
            android:textColor="#37474F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/pop_button"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:text="@string/pop"
            android:backgroundTint="@color/rosado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Latin_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Christian_button"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="HardcodedText,MissingConstraints" />

        <Button
            android:id="@+id/Latin_button"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:text="@string/latina"
            android:backgroundTint="@color/morado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.constraintlayout.widget.ConstraintLayout>



